fix font flickering

--- a/gatsby/src/styles/typography.css
+++ b/gatsby/src/styles/typography.css
@@ -1,44 +1,37 @@
-import { createGlobalStyle } from 'styled-components';
-
-import font from '../assets/fonts/frenchfries.woff';
-
-const Typography = createGlobalStyle`
-  @font-face {
+@font-face {
     font-family: FrenchFries;
-    src: url(${font});
-  }
-  html {
+    src: url('../assets/fonts/frenchfries.woff');
+}
+
+html {
     font-family: FrenchFries, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--black);
-  }
-  p, li {
+}
+p, li {
     letter-spacing: 0.5px;
-  }
-  h1,h2,h3,h4,h5,h6 {
+}
+h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
     margin: 0;
-  }
-  a {
+}
+a {
     color: var(--black);
     text-decoration-color: var(--red);
     /* Chrome renders this weird with this font, so we turn it off */
     text-decoration-skip-ink: none;
-  }
-  mark, .mark {
+}
+mark, .mark {
     background: var(--yellow);
     padding: 0 2px 2px 2px;
     margin: 0;
     display: inline;
     line-height: 1;
-  }
+}
 
-  .center {
+.center {
     text-align: center;
-  }
+}
 
-  .tilt {
+.tilt {
     transform: rotate(-2deg);
-  }
-`;
-
-export default Typography;
+}
